Finish out Building related APIs
